--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
        Taytay Senior High School offers several Academic Tracks like ABM, HUMSS, STEM and soon to offer GAS, the school also offers sports; and Technology Vocational and Livelihood (TVL) track with specialization in Information and Communication Technology (ICT), Bread and Pastry, Cookery, Food and Beverage and Shielded-Arc Metal Welding, Dressmaking and Beauty Care.<br>
 
      Presently, the school is under the supervision of Mrs. Nenita De Leon as principal — the school head of TaySenHigh. </h3> <br>
-     
+     <!--VIDEO-->
          <h2>Taytay Senior High School HYMN</h2>
  <div class="container">
   <video src="TaysenHYMN.mp4" width="900px" height="500px" controls="" autoplay="" 
