--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,8 @@
        <!--LOGO-->
 <div class="banner">
   <div class="navbar">
-    <img src="logo.png" class="logo">
+        <a href="https://www.facebook.com/DepedTayoTaytaySeniorHS.342569?mibextid=ZbWKwL">
+   <img src="logo.png" class="logo"> </a>
   <!--  <img src="deped.png" class="logo"> 
     <img src="rizal.png" class="logo"> -->
     <ul>
