--- a/club.html
+++ b/club.html
@@ -70,7 +70,7 @@
 <div class="polaroid">
   <img src="rcross.jpeg" alt="redcross">
   <div class="container">
-  <a href="https://www.facebook.com/tshs.sprcy?mibextid=ZbWKwL">SENIOR PLUS RED CROSS YOUTH (NA)</a>
+  <a href="https://www.facebook.com/tshs.sprcy?mibextid=ZbWKwL">SENIOR PLUS RED CROSS YOUTH</a>
   </div>
 </div>
   
