--- a/contact.html
+++ b/contact.html
@@ -69,12 +69,24 @@
   <p> <i class="fa-solid fa-location-dot"></i>
   #21 B. Pag-asa Street Brgy. Dolores Taytay, Rizal.
   </p>  <hr>
- <h2>NO COPYRIGHT INFRINGEMENT INTENDED
+      <!--RESOURCES-->
+ <h2>RESOURCES</h2>
+<div class="copyr">
+    <div class="son1">
+    <p>Taytay Senior High School-logo<br>Taytay Senior High School<br>Supreme Secondary Learner Government<br>MA'AM AGDONGs DAUGHTER-CLUB IMAGES<br>Shaun Calitizen-TSHS HYMN</p>
+    </div>
+    <div class="son1">
+    <p>Taytay Young Researchers And Innovators Guild<br>Mathematics Club<br>The Wordsmith And Ang Umalokohan<br>School Disaster Risk Reduction Management<br>
+    Rovers Scout<br>Senior Plus Red Cross Youth<br>Kalasag At Sulo Dance Troupe<br>ABM Executive Club<br>Sports Club<br>
+    Pride Alliance Club<br>YES-Organization<br>TVL Experts Club<br>Humanista<br>Taytay Elite Explorers' Science Society<br>Rob-Tech Club
+    </p>
+    </div>
+ </div>
+ 
+   <h2>NO COPYRIGHT INFRINGEMENT INTENDED
       <!--ICON-->
   <i class="fa-regular fa-copyright"></i>
   </h2>
-  <p>Taytay Senior High School<br>Supreme Secondary Learner Government<br> (MA'AM AGDONG DAUGHTER)CLUB IMAGES</p>
-  
   
 </div>
 </div>
