--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
  <h2>RESOURCES</h2>
 <div class="copyr">
     <div class="son1">
-    <p>Taytay Senior High School-logo<br>Taytay Senior High School<br>Supreme Secondary Learner Government<br>MA'AM AGDONGs DAUGHTER-CLUB IMAGES<br>Shaun Calitizen-TSHS HYMN</p>
+    <p>Taytay Senior High School-logo<br>Taytay Senior High School<br>Supreme Secondary Learner Government<br>Ms. Riza Mae Agdong-CLUB IMAGES<br>Mr. Shaun Calitizen-TSHS HYMN</p>
     </div>
     <div class="son1">
     <p>Taytay Young Researchers And Innovators Guild<br>Mathematics Club<br>The Wordsmith And Ang Umalokohan<br>School Disaster Risk Reduction Management<br>
