--- a/contact.html
+++ b/contact.html
@@ -74,12 +74,12 @@
 <h2>RESOURCES</h2>
 <div class="copyr">
     <div class="son1">
-    <p>Submitted to:<br> Mr. Don Rebenito <br>Mrs. Marissa Agdong <br><br>Taytay Senior High School-logo<br>Taytay Senior High School<br>Supreme Secondary Learner Government<br>Ms. Riza Mae Agdong-CLUB IMAGES<br>Mr. Shaun Calitizen-TSHS HYMN</p>
+    <p>Submitted to:<br> Mr. Don Rebenito <br>Mrs. Marissa Agdong <br><br>Taytay Senior High School-logo<br>Taytay Senior High School<br>Supreme Secondary Learner Government<br>Ms. Riza Mae Agdong-CLUB IMAGES<br>Mr. Shaun Calitizen-TSHS HYMN<br>Adrian R. Tataro</p>
     </div>
     <div class="son1">
     <p>Taytay Young Researchers And Innovators Guild<br>Mathematics Club<br>The Wordsmith And Ang Umalokohan<br>School Disaster Risk Reduction Management<br>
     Rovers Scout<br>Senior Plus Red Cross Youth<br>Kalasag At Sulo Dance Troupe<br>ABM Executive Club<br>Sports Club<br>
-    Pride Alliance Club<br>YES-Organization<br>TVL Experts Club<br>Humanista<br>Taytay Elite Explorers' Science Society<br>Rob-Tech Club<br>Adrian R. Tataro
+    Pride Alliance Club<br>YES-Organization<br>TVL Experts Club<br>Humanista<br>Taytay Elite Explorers' Science Society<br>Rob-Tech Club
     </p>
     </div>
  </div>
