--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 <h2>RESOURCES</h2>
 <div class="copyr">
     <div class="son1">
-    <p>Submitted to:<br> Mr. Don Rebenito <br>Mrs. Marissa Agdong <br><br>Taytay Senior High School-logo<br>Taytay Senior High School<br>Supreme Secondary Learner Government<br>Ms. Riza Mae Agdong-CLUB IMAGES<br>Mr. Shaun Calitizen-TSHS HYMN<br>Adrian R. Tataro</p>
+    <p>Submitted to:<br>Mrs. Marissa Agdong<br> Mr. Don Rebenito  <br><br>Taytay Senior High School-logo<br>Taytay Senior High School<br>Supreme Secondary Learner Government<br>Ms. Riza Mae Agdong-CLUB IMAGES<br>Mr. Shaun Calitizen-TSHS HYMN<br>Adrian R. Tataro</p>
     </div>
     <div class="son1">
     <p>Taytay Young Researchers And Innovators Guild<br>Mathematics Club<br>The Wordsmith And Ang Umalokohan<br>School Disaster Risk Reduction Management<br>
